src/components/Modal/style.modal.scss
@import "../../styles/styles.scss";

.modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.6);

  .modal-main {
    position: fixed;
    background: white;
    width: 25%;
    min-width: 250px;
    height: 400px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

    .close {
      display: flex;
      justify-content: flex-end;
      padding: 10px;

      button {
        border: none;
        padding: 5px;
        background-color: transparent;
        &:hover {
          cursor: pointer;
        }
      }
    }

    .signup-container {
      padding: 30px 0;
      display: flex;
      justify-content: center;
      align-items: center;
      flex-direction: column;
      height: 90%;

      h2 {
        font-family: $font-main;
        font-size: 1.5rem;
        margin-bottom: 20px;
      }

      .signup-form {
        display: flex;
        flex-direction: column;
        justify-content: space-between;

        .signup-form-input {
          border: none;
          outline: none;
          font-family: $font-main;
          border-bottom: 1px solid #d5cdcd;
          padding: 10px;
          background-color: $bg-grey;
          margin: 10px 0;
        }
        .signup-form-submit {
          margin: 20px 0;
          border: none;
          font-family: $font-main;
          color: white;
          background-color: $prim-blue;
          padding: 10px 0;
          border-radius: 5px;
          &:hover {
            cursor: pointer;
          }
          &:active {
            opacity: 0.7;
          }
        }
      }
    }
  }
}

.display-block {
  display: block;
}

.display-none {
  display: none;
}

.disabled {
  opacity: 0.5;
}

